# distributed-LLM-server

./: .gitignore
Code/cloud-native-handout-prithiraj-bhuyan/django-authentication/: db.sqlite3  requirements.txt
Code/cloud-native-handout-prithiraj-bhuyan/django-authentication/k8s/: deployment.yaml
Code/cloud-native-handout-prithiraj-bhuyan/django-authentication/task3/: asgi.py  urls.py
Code/cloud-native-handout-prithiraj-bhuyan/k8s-components/: gateway.yaml
Code/cloud-native-handout-prithiraj-bhuyan/k8s/cdpipeline/: imagepolicy-llm.yaml  (+1 more)
Code/cloud-native-handout-prithiraj-bhuyan/llm_server/: README.md
Code/cloud-native-handout-prithiraj-bhuyan/project3/grpc-p4/: buf.yaml  grpc_client_standard.py  grpc_client_streaming.py  pyproject.toml
Code/cloud-native-handout-prithiraj-bhuyan/project3/grpc-p4/llmproto/v1/: llm_pb2.py  llm_pb2_grpc.py
Code/cloud-native-handout-prithiraj-bhuyan/terraform/: .gitignore  variables.tf
Code/project-1-to-6-code/: .gitignore  ruff.toml  submitter
Code/project-1-to-6-code/django-authentication/: publickey.json  pyproject.toml
Code/project-1-to-6-code/django-authentication/docker/: Dockerfile
Code/project-1-to-6-code/django-authentication/k8s/: service.yaml
Code/project-1-to-6-code/django-authentication/task3/: settings.py  wsgi.py
Code/project-1-to-6-code/k8s-components/: api-gateway.yaml  clusterissuer.yaml  httproute.yaml  krakend.json  service.yaml
Code/project-1-to-6-code/llm_server/: .coverage  Makefile  pyproject.toml
Code/project-1-to-6-code/project3/dapr/master/: pyproject.toml
Code/project-1-to-6-code/project3/dapr/master/src/master/: master_st4.py
Code/project-1-to-6-code/project3/dapr/worker/: pyproject.toml
Code/project-1-to-6-code/terraform/: grype.yaml  main.tf  pipeline.yaml  pipelinerun.yaml  run-tests.yaml
Code/project-6-stateful-scaling-prithiraj-bhuyan/: submitter  submittermd5.txt  tree.txt
Code/project-6-stateful-scaling-prithiraj-bhuyan/llm_server/: locustfile.py
Code/project-6-stateful-scaling-prithiraj-bhuyan/p3django/: Makefile  pyproject.toml
Code/project-6-stateful-scaling-prithiraj-bhuyan/p3django/k8s/: deployment.yaml  login-hpa.yaml  mysql-migration-job.yaml  mysql-pvc.yaml  mysql-read-service.yaml
Code/project-6-stateful-scaling-prithiraj-bhuyan/p3django/p3login/: asgi.py  router.py  settings.py  urls.py
Code/project-6-stateful-scaling-prithiraj-bhuyan/p3django/p3login/login/: serializers.py  views.py
Code/project-6-stateful-scaling-prithiraj-bhuyan/t2-locust/: locustfile.py
Code/project-7-code/: output.json  output1.json  pyproject.toml  submitter_template.sh  task1output1.json  task1output2.json  viren.sh
Code/project-7-code/p3django/: db.sqlite3  manage.py  requirements.txt
Code/project-7-code/t2-locust/: pyproject.toml  testme_exceptions.csv  testme_stats_history.csv
Fall 2025 Python Recitations/P1 - Python Programming - Afternoon/Week 1 - Unit 1/: AI Tech - Recitation 1a - Python Exercises Aug 27 2025.ipynb  AI Tech - Recitation 1b - Python Exercises Aug 27 2025.ipynb
Fall 2025 Python Recitations/P1 - Python Programming - Afternoon/Week 2 - Unit 2/: AI_Tech F25 PPP_02_Recitation_03Sep2025.ipynb
Fall 2025 Python Recitations/P1 - Python Programming - Afternoon/Week 3 - Unit 3/: 1_Pre-recitation exercise for unit 3 - data structures.ipynb  2_AI_Tech F25 PPP_03_Recitation_10Sep2025.ipynb
Fall 2025 Python Recitations/P1 - Python Programming - Afternoon/Week 4 - Unit 4/: Week 4 Instructions.docx
Fall 2025 Python Recitations/P1 - Python Programming - Afternoon/Week 5 - Unit 5/: Week5_Python_OOP.pptx
Fall 2025 Python Recitations/P2 - Data Engineer - Afternoon/Week 13 - Unit 2/: de-unit2-kahoot.docx  de-unit2-recitation-class.docx  de-unit2-recitation-solutions.docx
Fall 2025 Python Recitations/P2 - Data Engineer - Afternoon/Week 14 - Unit 3/: DE-Recitation-U3.pptx  DE3-MongoDBActicity-Class.docx  DE3-MongoDBActicity-Solutions.docx  MongoDB-Acticity-Data.docx
Fall 2025 Python Recitations/P2 - Data Engineer - Afternoon/Week 15 - Unit 4/: de-unit4-PySpark-recitation-class.ipynb
Fall 2025 Python Recitations/P3 - AI Practitioner - Afternoon/Week 1/: AI-Data-Structures_class.ipynb
(+67 files in other folders)
