[project]
name = "django-authentication"
version = "0.1.0"
description = ""
authors = [
    {name = "Prithiraj Bhuyan",email = "pbhuyan@andrew.cmu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt[crypto] (>=5.5.1,<6.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "jwcrypto (>=1.5.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
